--- a/zeno-wallet-generator.html
+++ b/zeno-wallet-generator.html
@@ -94,7 +94,7 @@
 -->
 
 <head>
-  <title>Monero offline wallet generator</title>
+  <title>Zeno offline wallet generator</title>
   <meta charset="UTF-8">
     <style type="text/css">
         html {
@@ -8537,19 +8537,12 @@ return{_strlen:lb,_ge_mul8:Va,_keccak:db,_ge_scalarmult:Ta,_ge_fromfe_frombytes_
 
 
 
-var moneroConfig = {
-    coinUnitPlaces: 12,
-    coinSymbol: 'XMR',
-    coinName: 'Monero',
-    coinUriPrefix: 'monero:',
-    addressPrefix: 18
-};
-var aeonConfig = {
-    coinUnitPlaces: 12,
-    coinSymbol: 'AEON',
-    coinName: 'Aeon',
-    coinUriPrefix: 'aeon:',
-    addressPrefix: 0xB2
+var zenoConfig = {
+    coinUnitPlaces: 8,
+    coinSymbol: 'ZNO',
+    coinName: 'Zeno',
+    coinUriPrefix: 'zeno:',
+    addressPrefix: 196
 };
 var cnUtilGen = function(initConfig) {
     //var config = $.extend({}, initConfig);
@@ -8973,7 +8966,7 @@ var cnUtilGen = function(initConfig) {
 
     return this;
 };
-var cnUtil = cnUtilGen(moneroConfig);
+var cnUtil = cnUtilGen(zenoConfig);
 /*
  mnemonic.js : Converts between 4-byte aligned strings and a human-readable
  sequence of words. Uses 1626 common words taken from wikipedia article:
@@ -10726,15 +10719,14 @@ bC0zLjUsMjAuNGgtNkwyNDQuOCwzMTAuNkwyNDQuOCwzMTAuNnoiLz4KPC9nPgo8L3N2Zz4K">
             <p>
                 This page generates a new
                 <select onchange="js:setCoin(this.selectedIndex);" class="waves-effect waves-light btn" style="max-width: 20%">
-                  <option>Monero</option>
-                  <option>Aeon</option>
+                  <option>Zeno</option>
                 </select>
                 wallet. It is self contained and
                 does all the necessary calculations locally, so is suitable for generating a new wallet on a machine
                 that is not connected to the network, and may even never be. This way, you can create
-                a Monero/Aeon wallet without risking the keys. This file is GPG signed, see <a href="#gpg-instructions">GPG instructions</a>.
+                a Zeno wallet without risking the keys. This file is GPG signed, see <a href="#gpg-instructions">GPG instructions</a>.
                 You can check for up to date versions of this page
-                <a href="https://github.com/moneromooo-monero/monero-wallet-generator/blob/master/monero-wallet-generator.html">here</a>.
+                <a href="https://github.com/zeno-project/zeno-wallet-generator/blob/master/zeno-wallet-generator.html">here</a>.
             </p>
         </div>
     </div>
@@ -10779,7 +10771,7 @@ bC0zLjUsMjAuNGgtNkwyNDQuOCwzMTAuNkwyNDQuOCwzMTAuNnoiLz4KPC9nPgo8L3N2Zz4K">
                          style="line-height: 25px; height: 25px; font-size: 60%; padding: 0px 1.5rem;"/ id="show_qr_code">
                     </span>
 
-                    <p>This is the address you give to third parties to send aeon/monero to you.
+                    <p>This is the address you give to third parties to send zeno to you.
                         <br><b>It is the only information here that's meant to be public.</b>
                     </p>
                 </div>
@@ -10796,7 +10788,7 @@ bC0zLjUsMjAuNGgtNkwyNDQuOCwzMTAuNkwyNDQuOCwzMTAuNnoiLz4KPC9nPgo8L3N2Zz4K">
                 <div class="card-content pink-text text-darken-5">
                     <span class="card-title pink-text text-darken-5">Mnemonic seed</span>
                     <p>
-                        The mnemonic seed is a string that comprises 24 (Aeon) or 25 (Monero) words and allows you to recreate your
+                        The mnemonic seed is a string that comprises 25 (Zeno) words and allows you to recreate your
                         private keys. <b>Keep it secure!</b>
                     </p>
                 </div>
@@ -10852,22 +10844,22 @@ bC0zLjUsMjAuNGgtNkwyNDQuOCwzMTAuNkwyNDQuOCwzMTAuNnoiLz4KPC9nPgo8L3N2Zz4K">
                     <br>
                     If you found this useful, a donation would be appreciated:
                     <br>
+                <pre>Zeno: ZnX9qEt9dZJ9TRNwroYV4V7e2FRygNtEuTeMdTnkq1MxCsdR3hzV5PS99KfLsnRdLJXgaTSot8tEuCD6NxJCGMyb1TvjyvUQW</pre>
+					<br>
                 <pre>Monero: 4AfUP827TeRZ1cck3tZThgZbRCEwBrpcJTkA1LCiyFVuMH4b5y59bKMZHGb9y58K3gSjWDCBsB4RkGsGDhsmMG5R2qmbLeW</pre>
-                    <br>
-                <pre>Aeon: WmtXcFZj5iGY21JxAtFsJVQmQQyo7jgoJP8V4zLWVzDeeTfvbP8Mzb5gbNpQEc6BkeUYUqjGntHDSDyA6LKjdGBQ1w9iEpfVw</pre>
-
+                    
                 <br>
-                Thanks, and welcome to Monero!
+                Thanks, and welcome to Zeno!
                 </p>
 <h5 id="gpg-instructions">How to verify GPG signatures</h5>
 
 <p>
-All released versions of this page will be GPG signed by moneromooo, to avoid trojaned versions
+All released versions of this page will be GPG signed by zeno, to avoid trojaned versions
 being passed around. It is in your interest to check the signature.
 </p>
 <p>
 This page is maintained as a
-<a href="https://github.com/moneromooo-monero/monero-wallet-generator/">git repository</a>.
+<a href="https://github.com/zeno-project/zeno-wallet-generator/">git repository</a>.
 All commits are signed. In addition, released versions of the page are signed separately.
 In order to check either, you first need to import
 <a href="https://raw.githubusercontent.com/monero-project/bitmonero/master/utils/gpg_keys/moneromooo.asc">moneromooo's GPG key</a>
@@ -10883,12 +10875,12 @@ gpg --import moneromooo.asc
 <p>
 You need to get the signature file corresponding to the version of the page you're using.
 Original signature files are
-<a href="https://raw.githubusercontent.com/moneromooo-monero/monero-wallet-generator/master/monero-wallet-generator.html.asc">in the git repository</a>
-as well. Save it as monero-wallet-generator.html.asc, then:
+<a href="https://raw.githubusercontent.com/zeno-project/zeno-wallet-generator/master/zeno-wallet-generator.html.asc">in the git repository</a>
+as well. Save it as zeno-wallet-generator.html.asc, then:
 </p>
 
 <code>
-gpg --verify monero-wallet-generator.html.asc
+gpg --verify zeno-wallet-generator.html.asc
 </code>
 
 <p>
@@ -10896,12 +10888,12 @@ You should see a message similar to:
 </p>
 
 <code>
-gpg: Good signature from "moneromooo-monero &lt;moneromooo-monero@users.noreply.github.com&gt;"
+gpg: Good signature from "zeno-project &lt;zeno-project@users.noreply.github.com&gt;"
 </code>
 
 <p>
 Check the signature is from the key you imported previously! If not, you may be checking
-that file was properly signed by an attacker instead of moneromooo. Beware that anyone can
+that file was properly signed by an attacker instead of zeno. Beware that anyone can
 place any email address in a new GPG key, so the right email being shown is no guarantee.
 </p>
 
@@ -10938,12 +10930,12 @@ You should see a message similar to:
 </p>
 
 <code>
-gpg: Good signature from "moneromooo-monero &lt;moneromooo-monero@users.noreply.github.com&gt;"
+gpg: Good signature from "zeno-project &lt;zeno-project@users.noreply.github.com&gt;"
 </code>
 
 <p>
 Check the signature is from the key you imported previously! If not, you may be checking
-that file was properly signed by an attacker instead of moneromooo. Beware that anyone can
+that file was properly signed by an attacker instead of zeno. Beware that anyone can
 place any email address in a new GPG key, so the right email being shown is no guarantee.
 </p>
 </div>
@@ -10997,10 +10989,10 @@ function genwallet(lang)
   address_qr_widget.innerHTML = "";
   mnemonic_widget.innerHTML = mnemonic;
 
-  // only monero has the URI scheme
+  // only zeno has the URI scheme
   if (prefix_widget.value == "4") {
     qr=new QRCode(address_qr_widget, {correctLevel:QRCode.CorrectLevel.L});
-    qr.makeCode("monero:"+keys.public_addr);
+    qr.makeCode("zeno:"+keys.public_addr);
   }
   else {
     qr = null;
@@ -11044,7 +11036,7 @@ function genwallet_prefix_worker()
   mnemonic_widget.innerHTML = mnemonic;
 
   qr=new QRCode(address_qr_widget, {correctLevel:QRCode.CorrectLevel.L});
-  qr.makeCode("monero:"+keys.public_addr);
+  qr.makeCode("zeno:"+keys.public_addr);
 }
 
 var zerohex="0000000000000000000000000000000000000000000000000000000000000000";
@@ -11189,16 +11181,12 @@ function setCoin(index)
   var language
   prefix_widget = document.getElementById("prefix_widget");
   if (index == 0) {
-    cnUtil = cnUtilGen(moneroConfig);
+    cnUtil = cnUtilGen(zenoConfig);
     prefix_widget.value = "4";
     enable = true
     language = "english"
   }
-  else if (index == 1) {
-    cnUtil = cnUtilGen(aeonConfig);
-    prefix_widget.value = "W";
-    enable = false
-    language = "electrum"
+
   }
   enableLanguage("en", enable)
   enableLanguage("es", enable)
